Kubernetes/networking/minio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtualservice
  namespace: observability 
spec:
  hosts:
  - "minio.creative.opik.net"
  gateways:
  - istio-system/kubevision-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: observability-stack-app-minio-console.observability.svc.cluster.local
        port:
          number: 9001
